--- a/css/style.scss
+++ b/css/style.scss
@@ -166,7 +166,7 @@ header {
   z-index: 1024;
   transition: var(--transition);
   // backdrop-filter: blur(4px);
-
+  isolation: isolate;
   background-color: var(--headerBackgroundColor);
   nav {
     width: min(100% - 20px, 1320px);
@@ -200,11 +200,12 @@ header {
       }
       @media (max-width: 768px) {
         position: fixed;
-        z-index: 999;
+        z-index: -1;
         right: -100%;
-        top: 62px;
+        top: 0px;
         width: 100%;
         height: 100%;
+        padding: 60px 0;
         flex-direction: column;
         justify-content: center;
         background-color: var(--headerBackgroundColor);
@@ -212,6 +213,7 @@ header {
         .navLink {
           text-align: center;
           justify-content: center;
+          padding: 12px;
           // color: $whiteColor;
         }
       }
@@ -227,7 +229,7 @@ header {
       padding: 5px;
       cursor: pointer;
       transition: var(--transition);
-      z-index: 99999;
+      z-index: 2;
       span {
         position: absolute;
         left: 0;
