--- a/css/style.scss
+++ b/css/style.scss
@@ -10,9 +10,8 @@
   --transition: all 0.3s ease-in-out;
   --shadow: 0px 2px 4px #c1c1c1;
   --BigShadow: 0px 4px 24px #c1c1c1;
-  --headerBackgroundColor: var(--mainColor10);
+  --headerBackgroundColor: var(--whiteColor);
 }
-
 @font-face {
   font-family: madani;
   font-display: swap;
@@ -156,18 +155,18 @@ content {
   flex-direction: column;
   gap: 24px;
   min-height: calc(100vh - 80px);
+  
 }
-
 header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1024;
+  margin-bottom: 10px;
   transition: var(--transition);
-  // backdrop-filter: blur(4px);
-  isolation: isolate;
-  background-color: var(--headerBackgroundColor);
+  backdrop-filter: blur(4px);
+  background-color: #ffffff30;
   nav {
     width: min(100% - 20px, 1320px);
     display: flex;
@@ -204,17 +203,15 @@ header {
         right: -100%;
         top: 0px;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         padding: 60px 0;
         flex-direction: column;
         justify-content: center;
         background-color: var(--headerBackgroundColor);
-
         .navLink {
           text-align: center;
           justify-content: center;
           padding: 12px;
-          // color: $whiteColor;
         }
       }
       &.active {
@@ -281,12 +278,11 @@ header {
       }
     }
   }
-
-  .headerAnimate {
-    box-shadow: var(--BigShadow);
-    padding: 5px;
-    background-color: var(--backgroundColor);
-  }
+}
+.headerAnimate {
+  box-shadow: var(--BigShadow);
+  padding: 5px;
+  background-color: var(--whiteColor);
 }
 // //////////////////////////////////////////==================
 // //////////////////////////////////////////==================
@@ -343,57 +339,57 @@ header {
 @media (min-width: 768px) and (max-width: 992px) {
   /* Global */
   body {
-    font-size: 13px;
+    font-size: 14px;
   }
   h1 {
-    font-size: 24px;
+    font-size: 25px;
   }
   h2 {
-    font-size: 20px;
+    font-size: 21px;
   }
   h3 {
-    font-size: 19px;
+    font-size: 20px;
   }
   h4 {
-    font-size: 17px;
+    font-size: 18px;
   }
   h5 {
-    font-size: 15px;
+    font-size: 16px;
   }
   h6 {
-    font-size: 14px;
+    font-size: 15px;
   }
   a,
   p {
-    font-size: 13px;
+    font-size: 14px;
   }
 }
 /* small mobile :320px. */
 @media (max-width: 768px) {
   /* Global */
   body {
-    font-size: 12px;
+    font-size: 13px;
   }
   h1 {
-    font-size: 21px;
+    font-size: 23px;
   }
   h2 {
-    font-size: 17px;
+    font-size: 19px;
   }
   h3 {
-    font-size: 16px;
+    font-size: 18px;
   }
   h4 {
-    font-size: 15px;
+    font-size: 17px;
   }
   h5 {
-    font-size: 14px;
+    font-size: 16px;
   }
   h6 {
-    font-size: 13px;
+    font-size: 14px;
   }
   a,
   p {
-    font-size: 12px;
+    font-size: 13px;
   }
 }
