--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ content {
 }
 
 header {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -221,13 +222,23 @@ header nav .navMenu {
   display: flex;
   width: 100%;
   justify-content: end;
-  gap: 4px;
+  gap: 6px;
   transition: var(--transition);
 }
 header nav .navMenu .navLink {
   padding: 4px 12px;
   display: flex;
   align-items: center;
+  color: var(--blackColor);
+}
+header nav .navMenu .navLink:hover {
+  color: var(--mainColor);
+}
+header nav .navMenu .navLink.btn {
+  border: 1px solid var(--mainColor);
+  border-radius: 8px;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
 }
 @media (max-width: 768px) {
   header nav .navMenu {
@@ -241,6 +252,7 @@ header nav .navMenu .navLink {
     flex-direction: column;
     justify-content: center;
     background-color: var(--headerBackgroundColor);
+    align-items: center;
   }
   header nav .navMenu .navLink {
     text-align: center;
@@ -315,6 +327,103 @@ header nav .navBtn.active span:last-child {
   box-shadow: var(--BigShadow);
   padding: 5px;
   background-color: var(--whiteColor);
+}
+
+.mainSection {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  background-size: cover !important;
+  background-position: center center !important;
+  height: 490px;
+  border-radius: 0 0 8px 8px;
+  margin-bottom: 50px;
+  color: var(--whiteColor);
+  gap: 12px;
+}
+.mainSection h1 {
+  font-weight: bold;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 38px !important;
+}
+@media (max-width: 768px) {
+  .mainSection h1 {
+    font-size: 24px !important;
+  }
+}
+.mainSection h5 {
+  font-weight: normal;
+}
+.mainSection::before {
+  content: "";
+  position: absolute;
+  bottom: -50px;
+  left: 50%;
+  z-index: -1;
+  background-color: rgba(173, 43, 50, 0.5647058824);
+  width: 95%;
+  height: 200px;
+  border-radius: 100%;
+  transform: translateX(-50%);
+}
+
+footer .copyRight {
+  text-align: center;
+}
+footer .support {
+  position: fixed;
+  left: 10px;
+  bottom: 20px;
+  z-index: 999;
+  background-color: var(--bodyColor);
+  border-radius: 1000px;
+  padding: 5px;
+}
+footer .support .supportBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 50px;
+  min-height: 50px;
+  border-radius: 50%;
+  background-color: var(--mainColor);
+  box-shadow: var(--BigShadow);
+  cursor: pointer;
+  transition: var(--transition);
+}
+footer .support .supportBtn i {
+  font-size: 20px;
+  color: var(--whiteColor);
+}
+footer .support .links {
+  display: none;
+}
+footer .support .links a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 50px;
+  min-height: 50px;
+  border-radius: 50%;
+  background-color: var(--whiteColor);
+  box-shadow: var(--BigShadow);
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+footer .support .links a i {
+  font-size: 24px;
+  color: var(--whiteColor);
+}
+footer .support .links a.whatsapp {
+  background-color: #25d366;
+}
+footer .support .links a.call {
+  background-color: #34b7f1;
 }
 
 /* PC device :992px. */
