--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,31 @@ header nav .navBtn.active span:last-child {
   }
 }
 
+.btn {
+  padding: 12px 32px;
+  border: none;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
+  border-radius: 8px;
+  box-shadow: 0px 6px 0px #7e1c21;
+  transition: var(--transition);
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+.btn:hover {
+  transform: translateY(6px);
+  color: var(--whiteColor);
+  box-shadow: none !important;
+}
+.btn img {
+  width: 30px;
+  height: 30px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .headerAnimate {
   box-shadow: var(--BigShadow);
   padding: 5px;
@@ -365,7 +390,7 @@ header nav .navBtn.active span:last-child {
   bottom: -50px;
   left: 50%;
   z-index: -1;
-  background-color: rgba(173, 43, 50, 0.5647058824);
+  background-color: rgba(31, 31, 31, 0.5647058824);
   width: 95%;
   height: 200px;
   border-radius: 100%;
