--- a/css/style.scss
+++ b/css/style.scss
@@ -290,6 +290,32 @@ header {
     }
   }
 }
+
+.btn {
+  padding: 12px 32px;
+  // border: 1px solid $white-color;
+  border: none;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
+  border-radius: 8px;
+  box-shadow: 0px 6px 0px #7e1c21;
+  transition: var(--transition);
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+  &:hover {
+    transform: translateY(6px);
+    color: var(--whiteColor);
+    box-shadow: none !important;
+  }
+  img{
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+  }
+}
+
 .headerAnimate {
   box-shadow: var(--BigShadow);
   padding: 5px;
@@ -331,7 +357,7 @@ header {
     bottom: -50px;
     left: 50%;
     z-index: -1;
-    background-color: #ad2b3290;
+    background-color: #1f1f1f90;
     width: 95%;
     height: 200px;
     border-radius: 100%;
