--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ header nav .navBtn.active span:last-child {
   background-size: cover !important;
   background-position: center center !important;
   height: 490px;
-  border-radius: 0 0 8px 8px;
+  border-radius: 8px;
   margin-bottom: 50px;
   color: var(--whiteColor);
   gap: 12px;
