--- a/css/style.scss
+++ b/css/style.scss
@@ -332,7 +332,7 @@ header {
   background-size: cover !important;
   background-position: center center !important;
   height: 490px;
-  border-radius: 0 0 8px 8px;
+  border-radius: 8px ;
   margin-bottom: 50px;
   color: var(--whiteColor);
   gap: 12px;
