--- a/css/style.scss
+++ b/css/style.scss
@@ -162,7 +162,7 @@ header {
   left: 0;
   width: 100%;
   z-index: 1024;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   transition: var(--transition);
   backdrop-filter: blur(4px);
   background-color: #ffffff30;
@@ -309,7 +309,7 @@ header {
     color: var(--whiteColor);
     box-shadow: none !important;
   }
-  img{
+  img {
     width: 30px;
     height: 30px;
     object-fit: contain;
@@ -318,7 +318,7 @@ header {
 
 .headerAnimate {
   box-shadow: var(--BigShadow);
-  padding: 5px;
+  padding: 0 5px;
   background-color: var(--whiteColor);
 }
 
@@ -332,10 +332,10 @@ header {
   background-size: cover !important;
   background-position: center center !important;
   height: 490px;
-  border-radius: 8px ;
+  border-radius: 8px;
   margin-bottom: 50px;
   color: var(--whiteColor);
-  gap: 12px;
+  gap: 16px;
 
   h1 {
     font-weight: bold;
@@ -348,7 +348,7 @@ header {
       font-size: 24px !important;
     }
   }
-  h5{
+  h5 {
     font-weight: normal;
   }
   &::before {
@@ -362,6 +362,69 @@ header {
     height: 200px;
     border-radius: 100%;
     transform: translateX(-50%);
+  }
+}
+
+.mainAtropos {
+  position: relative;
+  .atropos-inner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    height: 490px;
+    border-radius: 8px;
+    margin-bottom: 50px;
+    color: var(--whiteColor);
+    gap: 16px;
+
+    h1 {
+      font-weight: bold;
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 38px !important;
+      // text-shadow: -2px 3px 0px var(--mainColor30);
+      @media (max-width: 768px) {
+        font-size: 24px !important;
+      }
+    }
+    h5 {
+      font-weight: normal;
+    }
+    .logo{
+      height: 50px;
+      width: 100%;
+      object-fit: contain;
+    }
+
+    .bgImage {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -2;
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0px;
+        left: 0%;
+        z-index: 1;
+        background-color: #1f1f1f90;
+        width: 100%;
+        height: 100%;
+      }
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    
   }
 }
 
