--- a/css/style.scss
+++ b/css/style.scss
@@ -204,6 +204,7 @@ header {
           border-radius: 8px;
           background-color: var(--mainColor);
           color: var(--whiteColor);
+          padding: 12px 24px;
         }
       }
       @media (max-width: 768px) {
