--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ header nav .navMenu .navLink.btn {
   border-radius: 8px;
   background-color: var(--mainColor);
   color: var(--whiteColor);
-  padding: 12px 24px;
+  padding: 8px 24px;
 }
 @media (max-width: 768px) {
   header nav .navMenu {
@@ -355,51 +355,9 @@ header nav .navBtn.active span:last-child {
   background-color: var(--whiteColor);
 }
 
-.mainSection {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  background-size: cover !important;
-  background-position: center center !important;
-  height: 490px;
-  border-radius: 8px;
-  margin-bottom: 50px;
-  color: var(--whiteColor);
-  gap: 16px;
-}
-.mainSection h1 {
-  font-weight: bold;
-  max-width: 600px;
-  margin: 0 auto;
-  text-align: center;
-  font-size: 38px !important;
-}
-@media (max-width: 768px) {
-  .mainSection h1 {
-    font-size: 24px !important;
-  }
-}
-.mainSection h5 {
-  font-weight: normal;
-}
-.mainSection::before {
-  content: "";
-  position: absolute;
-  bottom: -50px;
-  left: 50%;
-  z-index: -1;
-  background-color: rgba(31, 31, 31, 0.5647058824);
-  width: 95%;
-  height: 200px;
-  border-radius: 100%;
-  transform: translateX(-50%);
-}
-
 .mainAtropos {
   position: relative;
+  height: 490px;
 }
 .mainAtropos .atropos-inner {
   position: relative;
@@ -408,7 +366,6 @@ header nav .navBtn.active span:last-child {
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  height: 490px;
   border-radius: 8px;
   margin-bottom: 50px;
   color: var(--whiteColor);
@@ -449,7 +406,7 @@ header nav .navBtn.active span:last-child {
   bottom: 0px;
   left: 0%;
   z-index: 1;
-  background-color: rgba(31, 31, 31, 0.5647058824);
+  background: linear-gradient(-45deg, rgba(31, 31, 31, 0.8823529412), rgba(31, 31, 31, 0.6862745098));
   width: 100%;
   height: 100%;
 }
