--- a/css/style.scss
+++ b/css/style.scss
@@ -204,7 +204,7 @@ header {
           border-radius: 8px;
           background-color: var(--mainColor);
           color: var(--whiteColor);
-          padding: 12px 24px;
+          padding: 8px 24px;
         }
       }
       @media (max-width: 768px) {
@@ -225,7 +225,6 @@ header {
           padding: 12px;
         }
       }
-
       &.active {
         right: 0;
       }
@@ -291,7 +290,6 @@ header {
     }
   }
 }
-
 .btn {
   padding: 12px 32px;
   // border: 1px solid $white-color;
@@ -316,58 +314,14 @@ header {
     object-fit: contain;
   }
 }
-
 .headerAnimate {
   box-shadow: var(--BigShadow);
   padding: 0 5px;
   background-color: var(--whiteColor);
 }
-
-.mainSection {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  background-size: cover !important;
-  background-position: center center !important;
-  height: 490px;
-  border-radius: 8px;
-  margin-bottom: 50px;
-  color: var(--whiteColor);
-  gap: 16px;
-
-  h1 {
-    font-weight: bold;
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 38px !important;
-    // text-shadow: -2px 3px 0px var(--mainColor30);
-    @media (max-width: 768px) {
-      font-size: 24px !important;
-    }
-  }
-  h5 {
-    font-weight: normal;
-  }
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: -50px;
-    left: 50%;
-    z-index: -1;
-    background-color: #1f1f1f90;
-    width: 95%;
-    height: 200px;
-    border-radius: 100%;
-    transform: translateX(-50%);
-  }
-}
-
 .mainAtropos {
   position: relative;
+  height: 490px;
   .atropos-inner {
     position: relative;
     display: flex;
@@ -375,12 +329,10 @@ header {
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    height: 490px;
     border-radius: 8px;
     margin-bottom: 50px;
     color: var(--whiteColor);
     gap: 16px;
-
     h1 {
       font-weight: bold;
       max-width: 600px;
@@ -395,12 +347,11 @@ header {
     h5 {
       font-weight: normal;
     }
-    .logo{
+    .logo {
       height: 50px;
       width: 100%;
       object-fit: contain;
     }
-
     .bgImage {
       position: absolute;
       left: 0;
@@ -414,21 +365,18 @@ header {
         bottom: 0px;
         left: 0%;
         z-index: 1;
-        background-color: #1f1f1f90;
+        background: linear-gradient(-45deg, #1f1f1fe1, #1f1f1faf) ;
         width: 100%;
         height: 100%;
       }
-      img{
+      img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
     }
-
-    
   }
 }
-
 footer {
   .copyRight {
     text-align: center;
@@ -484,6 +432,7 @@ footer {
     }
   }
 }
+
 // //////////////////////////////////////////==================
 // //////////////////////////////////////////==================
 // //////////////////////////////////////////==================
