--- a/css/style.scss
+++ b/css/style.scss
@@ -290,6 +290,61 @@ header {
     }
   }
 }
+footer {
+  .copyRight {
+    text-align: center;
+  }
+  .support {
+    position: fixed;
+    left: 10px;
+    bottom: 20px;
+    z-index: 999;
+    background-color: var(--bodyColor);
+    border-radius: 1000px;
+    padding: 5px;
+    .supportBtn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 50px;
+      min-height: 50px;
+      border-radius: 50%;
+      background-color: var(--mainColor);
+      box-shadow: var(--BigShadow);
+      cursor: pointer;
+      transition: var(--transition);
+      i {
+        font-size: 20px;
+        color: var(--whiteColor);
+      }
+    }
+    .links {
+      display: none;
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 50px;
+        min-height: 50px;
+        border-radius: 50%;
+        background-color: var(--whiteColor);
+        box-shadow: var(--BigShadow);
+        margin-bottom: 10px;
+        cursor: pointer;
+        i {
+          font-size: 24px;
+          color: var(--whiteColor);
+        }
+        &.whatsapp {
+          background-color: #25d366;
+        }
+        &.call {
+          background-color: #34b7f1;
+        }
+      }
+    }
+  }
+}
 .btn {
   padding: 12px 32px;
   // border: 1px solid $white-color;
@@ -365,7 +420,7 @@ header {
         bottom: 0px;
         left: 0%;
         z-index: 1;
-        background: linear-gradient(-45deg, #1f1f1fe1, #1f1f1faf) ;
+        background: linear-gradient(-45deg, #1f1f1fe1, #1f1f1faf);
         width: 100%;
         height: 100%;
       }
@@ -377,58 +432,24 @@ header {
     }
   }
 }
-footer {
-  .copyRight {
+.services {
+  padding: 30px 0;
+  .title {
     text-align: center;
   }
-  .support {
-    position: fixed;
-    left: 10px;
-    bottom: 20px;
-    z-index: 999;
-    background-color: var(--bodyColor);
-    border-radius: 1000px;
-    padding: 5px;
-    .supportBtn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-width: 50px;
-      min-height: 50px;
-      border-radius: 50%;
-      background-color: var(--mainColor);
-      box-shadow: var(--BigShadow);
-      cursor: pointer;
-      transition: var(--transition);
-      i {
-        font-size: 20px;
-        color: var(--whiteColor);
-      }
-    }
-    .links {
-      display: none;
-      a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-width: 50px;
-        min-height: 50px;
-        border-radius: 50%;
-        background-color: var(--whiteColor);
-        box-shadow: var(--BigShadow);
-        margin-bottom: 10px;
-        cursor: pointer;
-        i {
-          font-size: 24px;
-          color: var(--whiteColor);
-        }
-        &.whatsapp {
-          background-color: #25d366;
-        }
-        &.call {
-          background-color: #34b7f1;
-        }
-      }
+}
+
+.references {
+  .swiper-slide {
+    width: auto;
+  }
+  .referenceLogo {
+    height: 100px;
+    padding: 8px;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
     }
   }
 }
