--- a/css/style.scss
+++ b/css/style.scss
@@ -335,12 +335,19 @@ footer {
           font-size: 24px;
           color: var(--whiteColor);
         }
-        &.whatsapp {
-          background-color: #25d366;
-        }
-        &.call {
-          background-color: #34b7f1;
-        }
+        // &.whatsapp {
+        //   background-color: #25d366;
+        // }
+        // &.email {
+        //   background-color: #c71610;
+        // }
+        // &.call {
+        //   background-color: #34b7f1;
+        // }
+        // &.location {
+        //   background-color: #f19f34;
+        // }
+
       }
     }
   }
