--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,19 @@ header nav .navBtn.active span:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
+  max-height: 500px;
+  margin: auto;
+}
+.services .ourServices .col .carImg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 768px) {
+  .services .ourServices .col .carImg {
+    max-height: 300px;
+  }
 }
 .services .ourServices .col:nth-child(3) .service {
   flex-direction: row !important;
