--- a/css/style.scss
+++ b/css/style.scss
@@ -496,6 +496,17 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
+        max-height: 500px;
+        margin: auto;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+        }
+        @media (max-width: 768px) {
+          max-height: 300px;
+        }
+        
       }
       &:nth-child(3) {
         .service {
