--- a/css/style.scss
+++ b/css/style.scss
@@ -770,7 +770,7 @@ footer {
   display: block;
   width: 100%;
   transition: 0.3s ease-in-out;
-  color: var(--textColor);
+  // color: var(--textColor);
   overflow: hidden;
   text-align: center;
   padding-top: 80px;
@@ -891,7 +891,7 @@ footer {
     a {
       padding: 8px;
       display: inline-block;
-      color: var(--textColor);
+      color: #777;
       &:hover {
         color: var(--mainColor);
       }
