--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@ header nav .navBtn.active span:last-child {
 
 .mainAtropos {
   position: relative;
-  height: 490px;
+  height: 500px;
 }
 .mainAtropos .atropos-inner {
   position: relative;
@@ -401,6 +401,10 @@ header nav .navBtn.active span:last-child {
   width: 100%;
   height: 100%;
   z-index: -2;
+}
+.mainAtropos .atropos-inner .bgImage .topSlider {
+  z-index: -2;
+  height: 100%;
 }
 .mainAtropos .atropos-inner .bgImage::before {
   content: "";
