--- a/css/style.scss
+++ b/css/style.scss
@@ -323,7 +323,7 @@ header {
 }
 .mainAtropos {
   position: relative;
-  height: 490px;
+  height: 500px;
   .atropos-inner {
     position: relative;
     display: flex;
@@ -361,6 +361,12 @@ header {
       width: 100%;
       height: 100%;
       z-index: -2;
+
+      .topSlider {
+        z-index: -2;
+        height: 100%;
+      }
+
       &::before {
         content: "";
         position: absolute;
