--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,11 @@ header nav .navBtn.active span:last-child {
 .services {
   padding: 30px 0;
 }
+@media (max-width: 768px) {
+  .services {
+    padding-bottom: 0;
+  }
+}
 .services .title {
   display: flex;
   flex-wrap: wrap;
@@ -491,6 +496,11 @@ header nav .navBtn.active span:last-child {
   flex-wrap: wrap;
   gap: 8px;
   padding: 100px 0 50px;
+}
+@media (max-width: 768px) {
+  .services .ourServices {
+    padding: 50px 0 25px;
+  }
 }
 .services .ourServices .col {
   flex: 1;
@@ -561,6 +571,7 @@ header nav .navBtn.active span:last-child {
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+  padding: 20px;
 }
 @media (max-width: 768px) {
   .services .ourServices .col .carImg {
@@ -568,8 +579,8 @@ header nav .navBtn.active span:last-child {
   }
 }
 .services .ourServices .col:nth-child(3) .service {
-  flex-direction: row !important;
-  text-align: start !important;
+  flex-direction: row;
+  text-align: start;
   padding-left: 12px;
   padding-right: 20px;
 }
@@ -577,14 +588,25 @@ header nav .navBtn.active span:last-child {
   left: unset;
   right: -1px;
 }
-@media (max-width: 768px) {
+@media (max-width: 945px) {
   .services .ourServices .col .service {
-    flex-direction: row !important;
-    text-align: start !important;
+    flex-direction: row;
+    text-align: start;
   }
   .services .ourServices .col .service::before {
     left: unset;
     right: -1px;
+  }
+  .services .ourServices .col:nth-child(3) {
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 12px;
+  }
+  .services .ourServices .col:nth-child(3) .service {
+    flex-direction: column;
+    min-width: 150px;
+    align-items: center;
+    text-align: center;
   }
 }
 
@@ -594,6 +616,11 @@ header nav .navBtn.active span:last-child {
 .references .referenceLogo {
   height: 100px;
   padding: 8px;
+}
+@media (max-width: 768px) {
+  .references .referenceLogo {
+    height: 70px;
+  }
 }
 .references .referenceLogo img {
   height: 100%;
