--- a/css/style.scss
+++ b/css/style.scss
@@ -324,7 +324,6 @@ header {
 .mainAtropos {
   position: relative;
   height: 500px;
-
   @media (max-width: 768px) {
     height: 400px;
   }
@@ -365,12 +364,10 @@ header {
       width: 100%;
       height: 100%;
       z-index: -2;
-
       .topSlider {
         z-index: -2;
         height: 100%;
       }
-
       &::before {
         content: "";
         position: absolute;
@@ -391,12 +388,14 @@ header {
 }
 .services {
   padding: 30px 0;
+  @media (max-width: 768px) {
+    padding-bottom: 0;
+  }
   .title {
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
     padding: 12px 12px;
-
     .side {
       flex: 1;
       display: flex;
@@ -450,6 +449,9 @@ header {
     flex-wrap: wrap;
     gap: 8px;
     padding: 100px 0 50px;
+    @media (max-width: 768px) {
+      padding: 50px 0 25px;
+    }
     .col {
       flex: 1;
       display: flex;
@@ -464,7 +466,6 @@ header {
         gap: 20px;
         border: 2px solid var(--bodyColor);
         padding: 24px;
-
         position: relative;
         transition: var(--transition);
         &::before {
@@ -517,6 +518,7 @@ header {
           width: 100%;
           height: 100%;
           object-fit: contain;
+          padding: 20px;
         }
         @media (max-width: 768px) {
           max-height: 300px;
@@ -524,8 +526,8 @@ header {
       }
       &:nth-child(3) {
         .service {
-          flex-direction: row !important;
-          text-align: start !important;
+          flex-direction: row;
+          text-align: start;
           padding-left: 12px;
           padding-right: 20px;
           &::before {
@@ -534,14 +536,24 @@ header {
           }
         }
       }
-      @media (max-width: 768px) {
+      @media (max-width: 945px) {
         .service {
-          flex-direction: row !important;
-          text-align: start !important;
-
+          flex-direction: row;
+          text-align: start;
           &::before {
             left: unset;
             right: -1px;
+          }
+        }
+        &:nth-child(3) {
+          flex-wrap: wrap;
+          flex-direction: row;
+          gap: 12px;
+          .service {
+            flex-direction: column;
+            min-width: 150px;
+            align-items: center;
+            text-align: center;
           }
         }
       }
@@ -555,6 +567,9 @@ header {
   .referenceLogo {
     height: 100px;
     padding: 8px;
+    @media (max-width: 768px) {
+      height: 70px;
+    }
     img {
       height: 100%;
       width: 100%;
