--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ content {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  min-height: calc(100vh - 350px);
+  min-height: calc(100vh - 300px);
 }
 
 header {
@@ -428,21 +428,13 @@ header nav .navBtn.active span:last-child {
      object-fit: cover;
 }
 
-.services {
-  padding: 30px 0;
-}
-@media (max-width: 768px) {
-  .services {
-    padding-bottom: 0;
-  }
-}
-.services .title {
+.title {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
   padding: 12px 12px;
 }
-.services .title .side {
+.title .side {
   flex: 1;
   display: flex;
   align-items: flex-end;
@@ -450,31 +442,31 @@ header nav .navBtn.active span:last-child {
   flex-direction: column;
   text-align: end;
 }
-.services .title .side h6 {
+.title .side h6 {
   display: flex;
   align-items: center;
   gap: 8px;
 }
-.services .title .side h6::after {
+.title .side h6::after {
   content: "//";
   color: var(--mainColor);
 }
-.services .title .side h6::before {
+.title .side h6::before {
   content: "//";
   color: var(--mainColor);
 }
-.services .title .side p {
+.title .side p {
   max-width: 300px;
 }
-.services .title .side h1 {
+.title .side h1 {
   font-size: 32px;
 }
 @media (max-width: 768px) {
-  .services .title .side h1 {
+  .title .side h1 {
     font-size: 24px;
   }
 }
-.services .title .side h1::after {
+.title .side h1::after {
   content: "";
   background-color: var(--mainColor);
   width: 8px;
@@ -482,14 +474,23 @@ header nav .navBtn.active span:last-child {
   display: inline-block;
   border-radius: 4px;
 }
-.services .title .side:nth-child(3) {
+.title .side:nth-child(3) {
   align-items: flex-start;
   text-align: start;
 }
-.services .title .distance {
+.title .distance {
   width: 2px;
   background-color: var(--mainColor30);
   display: flex;
+}
+
+.services {
+  padding: 30px 0;
+}
+@media (max-width: 768px) {
+  .services {
+    padding-bottom: 0;
+  }
 }
 .services .ourServices {
   display: flex;
@@ -943,7 +944,7 @@ footer .quickLinks {
 footer .quickLinks a {
   padding: 8px;
   display: inline-block;
-  color: #777;
+  color: var(--blackColor);
 }
 footer .quickLinks a:hover {
   color: var(--mainColor);
@@ -1057,6 +1058,62 @@ footer .support .links a {
 footer .support .links a i {
   font-size: 24px;
   color: var(--whiteColor);
+}
+
+.about {
+  width: min(100% - 20px, 1000px);
+  margin: auto;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+.about .col {
+  flex: 1;
+  min-width: 250px;
+  padding: 10px;
+  position: relative;
+}
+.about .topSlider img {
+  height: 550px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 8px;
+}
+.about .experience {
+  padding: 30px;
+  padding-top: 15px;
+  background-color: var(--mainColor);
+  color: var(--whiteColor);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  z-index: 3;
+  border-radius: 8px;
+  flex-direction: column;
+  gap: 8px;
+  box-shadow: -8px 8px 0 0px #1f1f1f;
+}
+.about .experience span {
+  font-weight: bold;
+  font-size: 40px;
+}
+.about .title {
+  flex-direction: column-reverse;
+}
+.about .title .side {
+  text-align: start !important;
+  align-items: flex-start !important;
+}
+.about .title .side p {
+  max-width: unset;
+}
+.about .title .distance {
+  width: unset;
+  height: 2px;
 }
 
 /* PC device :992px. */
